# Rede-convolucional

./: .gitignore  README.md  teste.txt
CNN_GPU/: .gitignore  CMakeLists.txt  MAIN_LUA.h  TESTE_NUMEROS_0_9.lua  a.lua  b.lua  conioHUD.h  data.m  dd.m  debug.m  debug.txt  library.c  libraryPythonWrapper.c  libraryPythonWrapper.h  main.c  main2.c  mainui.h  notas.md  redeTreinada.cnn  testeCamadas.c  testeCnn.h  testeOpenCL.c  treino.md  treino.txt  ui.h  uteisTreino.h
CNN_GPU/debug/: implementeSoftMax.c  remap.m  testeAllCNN.c  testeCamada.c  testeCnn.c  testeshuffle.c
CNN_GPU/debug/camada/: batchnorm.h
CNN_GPU/documentation/: CamadaConv.md  batchNormalization.md  funcaoAtivação.md
CNN_GPU/include/CL/: cl_platform.h
CNN_GPU/include/cnn/: cnn.h  cnn_errors_list.h  config.h  libraryPythonWrapper.h  memory_utils.h
CNN_GPU/include/cnn/LCG_Random/: lcg.h
CNN_GPU/include/cnn/camadas/: Camada.h  CamadaBatchNorm.h  CamadaConv.h  CamadaConvF.h  CamadaConvNC.h  CamadaDropOut.h  CamadaFullConnect.h  CamadaPRelu.h  CamadaPadding.h  CamadaPool.h  CamadaPoolAv.h  CamadaRelu.h  CamadaSoftMax.h
CNN_GPU/include/cnn/gpu/: Kernel.h  WrapperCL.h
CNN_GPU/include/cnn/tensor/: Tensor.h  Tensor_OBSOLETO.h
CNN_GPU/include/cnn/utils/: String.h  Thread.h  dir.c  (+7 more)
CNN_GPU/kernels/: CMakeLists.txt  buildKernel.py  conv.py  gpu.cl  gpu_function.cl  gpu_functions.cl  gpu_functions_relu.cl  main.c  showconv.py
CNN_GPU/kernels/camadas/: bathnorm.h  cnnutils.h  conv.h  convNc.h  dropout.h  fullconnect.h  padding.h  pool.h  poolav.h  prelu.h  relu.h  softmax.h  utils.h
CNN_GPU/pyTrain/: Activity.py  createCNN.py  layers.py  main.py  main.spec
CNN_GPU/pycnn/: CNN.py  numeros0_9.cnn  teste.lua  testeDropOut.py
CNN_GPU/pycnn/generateClasses/: cfunctions.py  generateClass.py  pytypes.py
CNN_GPU/python/: install.cmd  setup.py
CNN_GPU/python/CNN_GPU/: CNN.py  CNN_C_Wrapper.py  __init__.py  gpu_functions_otmsize.cl  rede0.cdc  rede0.cnn  tester.cnn
CNN_GPU/src/: Camada.h  CamadaConv.h  CamadaDropOut.h  CamadaFullConnect.h  CamadaPool.h  CamadaRelu.h  CnnLua.h  Tensor.h  cnn.c  cnn.h  defaultkernel.h  funcoesDeAtivacao.h  gpuKernels.c  gpuKernels.h  lcg.h  libraryPythonWrapper.c  libraryPythonWrapper.h  manageTrain.c  memory_utils.c  utils.h  vectorUtils.c
CNN_GPU/src/LCG_Random/: lcg.c  lcg.h
CNN_GPU/src/camadas/: Camada.c  Camada.h  CamadaBatchNorm.c  CamadaBatchNorm.h  CamadaConv.c  CamadaConv.h  CamadaConvNC.c  CamadaConvNC.h  CamadaDropOut.c  CamadaDropOut.h  CamadaFullConnect.c  CamadaFullConnect.h  CamadaPRelu.c  CamadaPadding.c  CamadaPadding.h  CamadaPool.c  CamadaPool.h  CamadaPoolAv.c  CamadaPoolAv.h  CamadaRelu.c  CamadaRelu.h  CamadaSoftMax.c  CamadaSoftMax.h  funcoesDeAtivacao.h  utils.h
CNN_GPU/src/conio2/: conio2.c  conio2.h
CNN_GPU/src/gpu/: Kernel.c  Kernel.h  WrapperCL.c  WrapperCL.h  lcg.c  matGPU.c
CNN_GPU/src/lua/: lua.h
CNN_GPU/src/pycnn/: CNN.py  testecnn.py
CNN_GPU/src/tensor/: Tensor.c  Tensor.h  Tensor_OBSOLETO.c
CNN_GPU/src/treino/: CnnLua.h  conioHUD.h  preparaImagens.h  sdlHUD.c  treinoWithLua.h  uteisTreino.h
CNN_GPU/src/utils/: String.c  Thread.c  defaultKernel.c  dir.c  list_args.c  manageTrain.c  memory_utils.c  time_utils.c  vectorUtils.c
CNN_GPU/teste/: CMakeTensor.txt  MAIN_LUA.h  commonsTest.h  loadAndPlot.py  mult.c  sum.c  testeCamadas.c  testeCnn.h  testeTensor.c
CNN_GPU/testes/: TestesCnn.h  teste_pool.txt  testes_conv.txt
Gab/: CMakeLists.txt  README.md  Setup.c  Setup.h  Thread.c  Thread.h  compile_rc.py  gabcomp.pbpx  icone.README  icone.rc  main.c  ui.h  update.py
Gab/app_test/: Image.h  index.html  main.c  main.css  t.c  ui_image.h
Gab/debug/: a.txt  all.c  batchnorm.c  conv2d.c  covf.c  dropout.c  fullconnect.c  iimg.c  matlab.h  pool.c  prelu.c  relu.c  run.py  softmax.c
Gab/matlab/: .gitignore  New_IMT.m  a.txt  alan.m  basebatchnorm.m  batchnorm.m  comp.m  conv2d.m  convf.m  covf.m  data.m  dfalan.m  dropout.m  fullconnect.m  img.m  mshape.m  plotaf.m  preluu.m  reluu.m  softmax.m  suptitle.m
Gab/project/: CMakeLists.txt
Gab/project/include/: config.h  cwrap_kernels.h  error_list.h  printUtils.h
Gab/project/kernels/: buildKernel.py  debugKernel.c  defaultkernel.h  gpuKernels.c  kernels.c  kernels.h
Gab/project/py/: Gab.py  c1.json  cnn.py  cpy.c  cpy.h  generatePythonWrapper.py  text.txt
Gab/ui_win_api/: GUI.h  client.h  grafico.h  image_window.h  plot.h  ui.h
Gab/ui_win_api/utils/: captureScreen.h  loadFile.h
Gab_cnn/: CMakeLists.txt  a.json  cnn.c  cnn.h  main.c  mainlua.c  parametros.h  ponto3d.h  testlibs.c
Gab_cnn/camadas/: CamadaBatchNorm.h  CamadaConv.c  CamadaConv.h  CamadaConvF.h  CamadaConvNC.h  CamadaDropOut.h  CamadaFullConnect.h  CamadaPRelu.h  CamadaPadding.h  CamadaPool.h  CamadaRelu.h  CamadaSoftMax.h  camada.c  camada.h  funcoesDeAtivacao.h
Gab_cnn/camadas/src/: CamadaBatchNorm.c  CamadaConv.c  CamadaConvF.c  CamadaConvNC.c  CamadaDropOut.c  CamadaFullConnect.c  CamadaPRelu.c  CamadaPadding.c  CamadaPool.c  CamadaRelu.c  CamadaSoftMax.c  camada.c
Gab_cnn/cnn/: cnn.c  cnn.h  cnn_lua.c  kernel_lib.c  parametros.h
Gab_cnn/kernels/: buildKernel.py  debugKernel.c  defaultkernel.c  defaultkernel.h  gpuKernels.c
Gab_cnn/kernels/camadas/: bathnorm.h  convNc.h  fullconnect.h  padding.h  pool.h  poolMax.h  poolav.h  prelu.h  relu.h  utils.h
gab/: CMakeLists.txt  main.c  srcPY.rar
gab/src/: Kernel.c  WrapperCL.c  WrapperCL.h  gabriela.c  gabriela.h  gabrielaLayer.c  matGPU.h
gab/src/gpu_src/: back_notnormalize.cl  documentacao.md
ui/: CMakeLists.txt  bk.h  main.c
ui/ui/gaphic/: Graph.c  Graph.h
ui/ui/list/: list.h
versao_3/Gab_cnn/: CMakeLists.txt  README.md  a.json  main.c  mainlua.c  mainui.h  teste.cnn  ui.h
versao_3/Gab_cnn/camadas/: CamadaBatchNorm.h  CamadaConvF.h  CamadaRelu.h  CamadaSoftMax.h  funcoesDeAtivacao.h
versao_3/Gab_cnn/cnn/: cnn.h  cnn_lua.h
versao_3/Gab_cnn/kernels/: defaultkernel.h  gpuKernels.c
versao_3/Gab_cnn/treino/: Manage.h  Thread.h  dir.c  dir.h  manageTrain.c
versao_3/LIBS/tensor/: CMakeLists.txt  a.json  debug.json  main_stack.c
(+464 files in other folders)
